# dr-ds

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
src/dr_ds/: __init__.py  atomic_io.py  coerce.py  parquet.py  serialization.py
tests/: test_atomic_io.py  test_coerce.py  test_parquet.py  test_serialization.py
