[project]
name = "dr-ds"
version = "0.1.0"
description = "Small, typed data science helpers for serialization and dataframe-oriented record normalization."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.13"
keywords = [
    "data-science",
    "serialization",
    "parquet",
    "pandas",
    "utilities",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.3.3",
    "srsly>=2.5.3",
]

[project.urls]
Homepage = "https://github.com/drothermel/dr-ds"
Repository = "https://github.com/drothermel/dr-ds"
Issues = "https://github.com/drothermel/dr-ds/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.ruff]
line-length = 79
